Fix dropdown overflow issues.

--- a/packages/components/src/components/ui/dropdown/dropdown.scss
+++ b/packages/components/src/components/ui/dropdown/dropdown.scss
@@ -31,10 +31,6 @@
   transform-origin: top left;
   min-width: var(--panel-width);
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  position: absolute;
-  left: 0;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
   max-height: var(--panel-height);
   font-family: var(--sc-font-sans);
   font-size: var(--sc-font-size-medium);
